system/k8s/with_shipped_nginx/03_cweb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: cweb-deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cweb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cweb
    spec:
      containers:
      - image: superboum/amd64_cweb:latest
        imagePullPolicy: Always
        name: cweb-instance
        ports:
        - containerPort: 8080
          hostPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
