system/k8s/with_shipped_nginx/04_cweb.service.yml
apiVersion: v1
kind: Service
metadata:
  name: cweb-service
spec:
  selector:
    app: cweb
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
